objects/EOF_Network_Inventory__c.object
<CustomObject>
    <fields>
        <fullName>EOF_Civico__c</fullName>
        <label>Civico</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Via__c</fullName>
        <label>Codice Via</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Comune__c</fullName>
        <label>Comune</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Coordinate_Building__c</fullName>
        <label>Coordinate Building</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Data_RFS_Indicativa__c</fullName>
        <label>Data RFS Indicativa</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Data_RFS__c</fullName>
        <label>Data RFS effettiva</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ultima_Modifica_Record__c</fullName>
        <label>Data Ultima Modifica Record</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ultima_Modifica__c</fullName>
        <label>Data Ultima Modifica Record</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ultima_Variazione_Stato_Buildin__c</fullName>
        <label>Data Ultima Variazione Stato Building</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ultima_Variazione_Stato_Scala_P__c</fullName>
        <label>Data Ultima Variazione Stato Scala Palaz</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Frazione__c</fullName>
        <label>Frazione</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_GPON_ID__c</fullName>
        <label>GPON ID</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ID_Building__c</fullName>
        <label>ID Building</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ID_Scala__c</fullName>
        <label>ID Scala</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Idsp1_ID__c</fullName>
        <label>Idsp1 ID</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Idsp1_POT__c</fullName>
        <label>Idsp1 POT</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Idsp2_ID__c</fullName>
        <label>Idsp2 ID</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EOF_Idsp2_POT__c</fullName>
        <label>Idsp2 POT</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Indirizzo__c</fullName>
        <label>Indirizzo</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Particella_Top__c</fullName>
        <label>Particella Top</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Pop__c</fullName>
        <label>Pop</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Pos_Perm_OLO__c</fullName>
        <label>Pos Perm OLO</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Pos_perm_EOF__c</fullName>
        <label>Pos perm EOF</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Posizione_OTDR_EOF__c</fullName>
        <label>Posizione OTDR EOF</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Posizione_OTDR_OLO__c</fullName>
        <label>Posizione OTDR OLO</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Provincia__c</fullName>
        <label>Provincia</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Regione__c</fullName>
        <label>Regione</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Scala_Palazzina__c</fullName>
        <label>Scala Palazzina</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Stato_Building__c</fullName>
        <label>Stato Building</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EOF_Stato_Scala_Palazzina__c</fullName>
        <label>Stato Scala Palazzina</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EOF_Totale_UI__c</fullName>
        <label>Totale UI</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Network Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EOF_ID_Building__c</columns>
        <columns>EOF_Provincia__c</columns>
        <columns>EOF_Comune__c</columns>
        <columns>EOF_Particella_Top__c</columns>
        <columns>EOF_Indirizzo__c</columns>
        <columns>EOF_Civico__c</columns>
        <columns>EOF_Stato_Building__c</columns>
        <columns>EOF_Pop__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tutto</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>NI-{0000000000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Network Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>